chores (style.css): update style.css to correct img alignment

--- a/css/style.css
+++ b/css/style.css
@@ -530,6 +530,7 @@ body {
     flex-direction: column;
     align-items: flex-start;
     justify-content: space-between;
+    width: 67%; /* 67% of the parent */
     padding: 10px 5px 5px 15px;
 
 }
